Add agreement confirmation request functionality and email notification. Change company activation link in email notification
