# app/Http/Controllers/PracticeController.php
@@ -7,12 +7,14 @@ use App\Enums\PracticeStatusEnum;
 use App\Http\Requests\PracticeListRequest;
 use App\Http\Requests\StorePracticeRequest;
 use App\Http\Resources\PracticeResource;
+use App\Mail\AgreementConfirmationRequestedMail;
 use App\Models\Company;
 use App\Models\Practice;
 use App\Models\PracticeCompany;
 use App\Models\PracticeStatusHistory;
 use Illuminate\Http\Request;
 use Illuminate\Support\Facades\DB;
+use Illuminate\Support\Facades\Mail;
 
 class PracticeController extends Controller
 {
@@ -301,7 +303,84 @@ class PracticeController extends Controller
         //
     }
 
-    public function requestAgreementApproval($id, Request $request)
+    public function agreementConfirmationRequest($id, Request $request)
+    {
+        $user = $request->user();
+
+        $isStudent = $user && $user->hasRoleId(RoleEnum::STUDENT->value);
+
+        if (!$isStudent) {
+            return response()->json(['success' => false, 'statusCode' => 403, 'message' => __('practice.request_approval_not_allowed')], 403);
+        }
+
+        $with = ['studyProgram', 'practiceCompany', 'student'];
+/*        DB::listen(function ($query) {
+            // $query->sql, $query->bindings, $query->time
+            logger()->info('SQL', ['sql' => $query->sql, 'bindings' => $query->bindings, 'time' => $query->time]);
+        });*/
+        $practice = Practice::query()
+            ->where('student_id', $user->id)
+            ->whereIn('status', [
+                PracticeStatusEnum::CREATED->value,
+                PracticeStatusEnum::AGREEMENT_REJECTED_BY_COMPANY->value,
+                PracticeStatusEnum::AGREEMENT_REJECTED_BY_SUPERVISOR->value,
+            ])
+            ->where('id', $id)
+            ->with($with)
+            ->first();
+
+        if (!$practice) {
+            return response()->json(['success' => false, 'statusCode' => 404, 'message' => __('practice.not_found')], 404);
+        }
+
+        $currentStatus = $practice->status;
+
+        $practice->status = PracticeStatusEnum::AGREEMENT_CONFIRM_REQUESTED->value;
+        $practice->save();
+
+        PracticeStatusHistory::create([
+            'practice_id' => $practice->id,
+            'user_id' => $user->id,
+            'status' => PracticeStatusEnum::AGREEMENT_CONFIRM_REQUESTED->value,
+            'comment' => ($currentStatus === PracticeStatusEnum::CREATED->value) ? __('practice.agreement_confirmation_requested') : __('practice.agreement_reconfirmation_requested'),
+        ]);
+
+        if ($practice->company_id) {
+            try {
+                $confirmLink = route('practices.agreement.confirm', ['id' => $practice->id]);
+            } catch (\Exception $e) {
+                $confirmLink = null;
+            }
+
+            try {
+                $rejectLink = route('practices.agreement.reject', ['id' => $practice->id]);
+            } catch (\Exception $e) {
+                $rejectLink = null;
+            }
+
+            $firstInit = mb_substr($practice->student->first_name, 0, 1);
+            $lastInit  = mb_substr($practice->student->last_name, 0, 1);
+            $printName = trim($firstInit . '. ' . $lastInit . '.');
+
+            $options = [
+                'isReconfirm' => $currentStatus !== PracticeStatusEnum::CREATED->value,
+                'confirmLink' => $confirmLink,
+                'rejectLink' => $rejectLink,
+                'printName' => $printName,
+            ];
+
+            Mail::to($practice->practiceCompany->contact_email)->send(new AgreementConfirmationRequestedMail($practice, $options));
+        }
+
+        return response()->json(['success' => true, 'statusCode' => 200, 'message' => __('practice.agreement_approval_requested_successfully')]);
+    }
+
+    public function agreementConfirm($id, Request $request)
+    {
+        //
+    }
+
+    public function agreementReject($id, Request $request)
     {
         //
     }
