# documents/openapi.yaml
@@ -1039,30 +1039,139 @@ paths:
                         type: string
               examples:
                 default:
+                  description: Json response example for student
                   value:
-                    id: 1
-                    student_id: 1
-                    company_id: 1
-                    semester: summer
-                    academic_year: '2025/2026'
-                    start_date: '2025-06-01'
-                    end_date: '2025-08-31'
-                    status: created
-                    job_title: Software Developer Intern
-                    job_description: Assist in developing web applications.
-                    study_program_id: 1
-                    practice_company:
-                      name: Slovenské IT s.r.o.
-                      address: Mlynské nivy 16, 821 09 Bratislava
-                      company_email: slovenske@gmail.com
-                      contact_name: Michal Kráľ
-                      contact_email: michal.kral@slovenskeit.sk
-                      contact_phone: '+421-2-5555-1234'
-                    practice_status_history:
-                      - user_id: 1
-                        status: created
-                        comment: null
-                        created_at: '2025-10-09T20:22:24.000000Z'
+                    data:
+                      id: 2
+                      student_id: 1
+                      company_id: 6
+                      semester: "winter"
+                      academic_year: "2025/2026"
+                      start_date: null
+                      end_date: null
+                      status: "created"
+                      job_title: "Data Analyst Intern"
+                      job_description: "Support data analysis and reporting tasks."
+                      study_program:
+                        id: 2
+                        code: "INF-M"
+                        name: "Master in Informatics"
+                      practice_status_history:
+                        - id: 2
+                          practice_id: 2
+                          user_id: 1
+                          status: "created"
+                          comment: null
+                          created_at: "2025-10-26 18:30:02"
+                          updated_at: "2025-10-26 18:30:02"
+                      practice_company:
+                        id: 2
+                        practice_id: 2
+                        name: "Energo Slovensko a.s."
+                        address: "Štefánikova 24, 811 05 Bratislava"
+                        company_email: "energo@gmail.com"
+                        contact_phone: "+421-2-4444-5678"
+                        contact_email: "veronika.holubova@energosk.sk"
+                        contact_name: "Veronika Holubová"
+                      created_at: "2025-10-26 18:30:02"
+                      updated_at: "2025-10-26 18:30:02"
+                supervisor_role_example:
+                  description: Json response example for supervisor
+                  value:
+                    data:
+                      id: 1
+                      student_id: 1
+                      company_id: 5
+                      semester: "winter"
+                      academic_year: "2025/2026"
+                      start_date: "2025-10-22"
+                      end_date: "2025-12-23"
+                      status: "canceled"
+                      job_title: "Software Developer Intern"
+                      job_description: "Assist in developing web applications."
+                      study_program:
+                        id: 1
+                        code: "INF-B"
+                        name: "Bachelor in Informatics"
+                      practice_status_history:
+                        - id: 1
+                          practice_id: 1
+                          user_id: 1
+                          status: "created"
+                          comment: null
+                          created_at: "2025-10-26 18:30:02"
+                          updated_at: "2025-10-26 18:30:02"
+                        - id: 5
+                          practice_id: 1
+                          user_id: 1
+                          status: "canceled"
+                          comment: null
+                          created_at: "2025-10-26 20:49:00"
+                          updated_at: "2025-10-26 20:49:00"
+                      practice_company:
+                        id: 1
+                        practice_id: 1
+                        name: "Slovenské IT s.r.o."
+                        address: "Mlynské nivy 16, 821 09 Bratislava"
+                        company_email: "slovenske@gmail.com"
+                        contact_phone: "+421-2-5555-1234"
+                        contact_email: "michal.kral@slovenskeit.sk"
+                        contact_name: "Michal Kráľ"
+                      student:
+                        id: 1
+                        user_id: 1
+                        first_name: "John"
+                        last_name: "Doe"
+                        student_email: "john.student@example.com"
+                        primary_email: "john.alt@example.com"
+                        phone: "123456789"
+                        address: "123 Main St, Cityville"
+                      created_at: "2025-10-26 18:30:02"
+                      updated_at: "2025-10-26 20:49:00"
+                company_role_example:
+                  description: Json response example for company
+                  value:
+                    data:
+                      id: 1
+                      student_id: 1
+                      company_id: 5
+                      semester: "winter"
+                      academic_year: "2025/2026"
+                      start_date: "2025-10-22"
+                      end_date: "2025-12-23"
+                      status: "canceled"
+                      job_title: "Software Developer Intern"
+                      job_description: "Assist in developing web applications."
+                      study_program:
+                        id: 1
+                        code: "INF-B"
+                        name: "Bachelor in Informatics"
+                      practice_status_history:
+                        - id: 1
+                          practice_id: 1
+                          user_id: 1
+                          status: "created"
+                          comment: null
+                          created_at: "2025-10-26 18:30:02"
+                          updated_at: "2025-10-26 18:30:02"
+                        - id: 5
+                          practice_id: 1
+                          user_id: 1
+                          status: "canceled"
+                          comment: null
+                          created_at: "2025-10-26 20:49:00"
+                          updated_at: "2025-10-26 20:49:00"
+                      student:
+                        id: 1
+                        user_id: 1
+                        first_name: "John"
+                        last_name: "Doe"
+                        student_email: "john.student@example.com"
+                        primary_email: "john.alt@example.com"
+                        phone: "123456789"
+                        address: "123 Main St, Cityville"
+                      created_at: "2025-10-26 18:30:02"
+                      updated_at: "2025-10-26 20:49:00"
         '404':
           description: Practice not found
           content:
